--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
           top:250px;
           left:-220px;
       }
+      @media (max-width:600px){
+          h1{
+              position:relative;
+              top:250px;
+              left:-190px;
+          }
+      }
     </style>
 </head>
 <body>
